Build the TickMaterials from previous tick parameters
-this avoids reaching into the snapshot instance variable to get this